<resources>
    <string name="app_name">Care</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="permissions_needed">Permission Needed</string>
    <string name="turn_speaker_on"></string>
    <string name="settings">Settings</string>
    <string name="room_status"></string>

    <string name="pref_title_audio_codec"></string>
    <string name="codec_title"></string>
    <string name="pref_title_video_codec"></string>
    <string name="vp8_simulcast"></string>
    <string name="sender_bandwidth_constraints"></string>
    <string name="max_audio_bitrate"></string>
    <string name="max_video_bitrate"></string>
    <string name="log_in">Log In</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="forgot_your_password">Forgot Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="email">Email</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="location_already_enabled">Location Permission Already Enabled</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="zipcode">Zipcode</string>
    <string name="age">Age</string>
    <string name="date_of_birth">Date Of Birth</string>
    <string name="confirm_your_identity">Confirm your identity</string>
    <string name="enter_code">Enter the code sent to your phone number</string>
    <string name="resend_verification_code">Resend verification code</string>
    <string name="verification_continue">Continue</string>
    <string name="social_security_number">Social Security Number</string>
    <string name="upload_driver_s_license">Upload Driver\'s License</string>
    <string name="upload_state_id">Upload State ID</string>
    <string name="upload_resume">Upload Resume</string>
    <string name="upload_certificate">Upload Certificate</string>
    <string name="disclaimer">Disclaimer</string>
    <string name="sign_in">Sign In</string>
    <string name="send_reminder">Send Reminder</string>
    <string name="cancel">Cancel</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="already_have_an_account_log_in">Already have an account? Log In!</string>

    <string name="notification_channel_name">CareOff Notification</string>
    <string name="notification_channel_des">CareOff Notification Description</string>
    <string name="availible">Available</string>
    <string name="assigned">Assigned</string>
    <string name="interested">Interested</string>
    <string name="past">Past</string>
    <string name="welcome">Welcome, %1$s!</string>
</resources>
