<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto">
<ScrollView xmlns:tools="http://schemas.android.com/tools"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:gravity="center">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_margin="30dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:text="Hao, Yang"
            android:gravity="left"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:text="July 1st, 1994"
            android:gravity="left"/>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:text="646-123-4567"
            android:gravity="left"/>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="64dp"
            app:errorEnabled="true"
            android:layout_marginBottom="20dp"
            android:layout_gravity="left">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/social_security_number"/>

        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp">

            <ImageView
                android:layout_weight="2"
                android:layout_width="0dp"
                android:id="@+id/license_image"
                android:background="@drawable/ic_video_call_black_24dp"
                android:layout_height="match_parent"/>

            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/upload_driver_s_license"
                android:id="@+id/upload_license"
                android:layout_weight="3"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp">

            <ImageView
                android:layout_weight="2"
                android:layout_width="0dp"
                android:id="@+id/id_image"
                android:background="@drawable/ic_call_end_white_24dp"
                android:layout_height="match_parent"/>

            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/upload_state_id"
                android:id="@+id/upload_id"
                android:layout_weight="3"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp">

            <ImageView
                android:layout_weight="2"
                android:layout_width="0dp"
                android:background="@drawable/ic_launcher_foreground"
                android:id="@+id/resume_image"
                android:layout_height="match_parent"/>

            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/upload_resume"
                android:id="@+id/upload_resume"
                android:layout_weight="3"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp">

            <ImageView
                android:layout_weight="2"
                android:layout_width="0dp"
                android:background="@drawable/ic_phonelink_ring_white_24dp"
                android:id="@+id/certificate_image"
                android:layout_height="match_parent"/>

            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/upload_certificate"
                android:id="@+id/upload_certificate"
                android:layout_weight="3"/>
        </LinearLayout>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/disclaimer"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="Next"/>
    </LinearLayout>
</ScrollView>
</layout>