<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto">


    <RelativeLayout android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/background">

        <ImageView
            android:id="@+id/logo_image_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="119dp"
            android:src="@drawable/logo_horizontal"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/forgot_your_password"
            android:gravity="center"
            android:textColor="@color/accent"
            android:textSize="36sp"
            android:id="@+id/sign_in_text"
            android:layout_marginTop="303dp"
            android:layout_below="@id/logo_image_view"/>


        <LinearLayout
            android:id="@+id/login_layout"
            android:layout_width="match_parent"
            android:layout_below="@id/sign_in_text"
            android:layout_height="match_parent"
            android:layout_marginTop="29dp"
            android:layout_centerInParent="true"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginEnd="40dp"
                app:errorEnabled="true"
                android:id="@+id/textInputLayoutPassword"
                android:layout_gravity="center">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email"/>
            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/password_reset_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:layout_marginTop="10dp"
            android:backgroundTint="@color/accent"
            android:text="@string/send_reminder"
            android:layout_above="@+id/cancel_action"
            android:textColor="@color/text_color"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginLeft="40dp"
            android:layout_marginBottom="10dp"
            android:background="#00FFFFFF"
            android:textColor="@color/accent"
            android:text="@string/cancel"
            android:id="@+id/cancel_action"
            android:layout_alignParentStart="true"/>
    </RelativeLayout>
</layout>